@@ -1,3 +1,8 @@
+Fri Sep 10 16:43:39 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Makefile.am: Removed references to files removed at
+         Thu Sep  9 11:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
 Fri Sep 10 11:07:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * ace/TSS_T.h:
